--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3615,7 +3615,7 @@ tbody.collapse.show {
     flex-wrap: wrap;
     padding-left: 0;
     margin-bottom: 0;
-    list-style: none
+    list-style: none;
 }
 
 .nav-link {
@@ -3637,7 +3637,7 @@ tbody.collapse.show {
 }
 
 .nav-tabs .nav-item {
-    margin-bottom: -1px
+    margin-bottom: -1px;
 }
 
 .nav-tabs .nav-link {
