--- a/css/common.css
+++ b/css/common.css
@@ -55,3 +55,13 @@ body a:hover {
 .main {
     flex: 1 0 auto
 }
+
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
+  }
